fixed the overflow issue on the dropdown

--- a/src/components/showEdit/showEdit.module.scss
+++ b/src/components/showEdit/showEdit.module.scss
@@ -68,7 +68,6 @@
   min-width: 950px;
   max-width: 100%;
   max-height: 700px;
-  overflow: auto;
   border: 1px solid;
   background: var(--lumina-bg-color);
   border-radius: 5px;
